subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/Switch_Invalid_2.while
void foo(int x) {
    switch (x) {
        case 4:
            break;
        case 2.3:
            break;
        default:
    }
}

void main() {
    foo(1);
}

